# ndfilters

./: .readthedocs.yml  README.ipynb  README.md  pyproject.toml
.github/workflows/: black.yml  publish.yml  tests.yml  update-readme.yml
docs/: conf.py  index.rst
ndfilters/: __init__.py  _convolve.py  _generic.py  _indices.py  _mean.py  _mean_trimmed.py  _median.py  _trimmed_mean.py  _variance.py
ndfilters/_tests/: test_convolve.py  test_generic.py  test_mean.py  test_median.py  test_trimmed_mean.py  test_variance.py
ndfilters/tests/: test_mean_trimmed.py  test_trimmed_mean.py
