[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ndfilters"
authors = [
    {name = "Roy T. Smart", email = "roytsmart@gmail.com"},
]
description = "Similar to the filters in `scipy.ndimage` but accelerated using Numba"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy<2",
    "numba",
    "astropy",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "scipy",
    "astropy",
]
doc = [
    "pytest",
    "scipy",
    "pooch",
    "matplotlib",
    "graphviz",
    "sphinx-autodoc-typehints",
    "pydata-sphinx-theme",
    "ipykernel",
    "jupyter-sphinx",
    "sphinx-favicon",
]

[project.urls]
Homepage = "https://github.com/sun-data/ndfilters"
Documentation = "https://ndfilters.readthedocs.io/en/latest"

[tool.setuptools]
packages = ["ndfilters"]

[tool.setuptools_scm]
